[package]
name = "teams_remove_cache"
version = "0.1.0"
edition = "2018"
authors = ["Tom Vercauteren",]
description = "Remove cache files and directories created by Microsoft Teams."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="~2.33"}